[project]
name = "ocr-service"
version = "0.1.0"
description = "OCR service for extracting student information from ID cards"
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
  "fastapi[standard]==0.116.1",
  "modal==1.1.2",
  "numpy==2.4.2",
  "opencv-python==4.13.0.92",
  "paddleocr[all]==3.4.0",
  "paddlepaddle==3.3.0",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "mypy",
  "types-requests",
  "types-pytz",
]

[project.scripts]
test = "pytest"
test-coverage = "pytest --cov"
type-check = "mypy ."
format = "ruff format --check ."
format-fix = "ruff format ."
lint = "ruff lint --check ."
lint-fix = "ruff lint ."
dev = "uvicorn app:app --host 127.0.0.1 --port 5500 --reload"
start = "uvicorn app:app --host 127.0.0.1 --port 5500"
run = "modal run modal_deployment.py"
serve = "modal serve modal_deployment.py"
deploy = "modal deploy modal_deployment.py"